<resources>
    <string name="app_name">\tCalorie Countdown app for android</string>
    <string name="app_name2">\tGlobal app</string>
    <string name="app_name3">\tEnergy Burnt</string>
    <string name="splash">Calorie Countdown app</string>
    <string name="action_settings">Settings</string>
    <string name="spellchecker_name">Spell_Checker_GranularFragment</string>
    <string name="subtype_generic">English</string>
    <string name="subtype_generic2">French</string>
    <string name="hello_world">86071</string>
    <string name="hello_world2">Your Countdown Balance</string>
    <string name="weight_conversion_text"> \t\t\t\t\t\t\Current estimated weight: 270.6lbs</string>
    <string name="estimated_date_to_zero">Estimate arrival date to zero and £6.93 : 16 08 11</string>
    <string name="last_modified">Balance last updated on</string>
    <string name="last_modified2">1159, 24 JAN 21</string>
    <string name="Credit_Button">Credit</string>
    <string name="Debit_Button">Debit</string>
    <string name="action_start_weightloss_title">Start Weight Loss</string>
    <string name="action_kitty">Kitty</string>
    <string name="Health">Health APIs</string>
    <string name="Health_Data1">Health Data</string>
    <string name="Health_Data2">Activity</string>
    <string name="Health_Data3">Mindfulness</string>
    <string name="Health_Data4">Nutrition</string>
    <string name="Health_Data5">Sleep</string>
    <string name="Health_Data6">Water</string>
    <string name="Health_Data7">Body Fat Percentage</string>
    <string name="Health_Data8">Body Mass Index</string>
    <string name="Health_Data9">Lean Body Mass</string>
    <string name="Health_Data10">Waist Circumference</string>
    <string name="Health_Data13">Blood Pressure</string>
    <string name="Health_Data14">Blood Body Temperature</string>
    <string name="Health_Data23">Blood Alcohol Content</string>
    <string name="Health_Data24">Blood Glucose</string>
    <string name="Health_Data37">Electrocardiogram (ECG)</string>
    <string name="Health_Data16">Heart Rate Variability</string>
    <string name="Health_Data17">High Heart Rate Notifications</string>
    <string name="Health_Data18">Irregular Rhythm Notifications</string>
    <string name="Health_Data19">Low Heart Rate Notifications</string>
    <string name="Health_Data20">Walking Heart Rate</string>
    <string name="Health_Data11">Heart Rate</string>
    <string name="Health_Data12">Resting Heart Rate</string>
    <string name="Health_Data36">Respiratory Rate</string>
    <string name="Health_Data25">Electrodermal Activity</string>
    <string name="Health_Data26">Forced Expiratory Volume, 1 sec</string>
    <string name="Health_Data27">Forced Vital Capacity</string>
    <string name="Health_Data28">Inhaler Usage</string>
    <string name="Health_Data29">Insulin Delivery</string>
    <string name="Health_Data30">Oxygen Saturation</string>
    <string name="Health_Data31">Peak Expiratory Flow Rate</string>
    <string name="Health_Data32">Peripheral Pefusion Index</string>
    <string name="Health_Data33">UV Index</string>
    <string name="Health_Data21">Data Sources</string>
    <string name="Health_Data22">Manual Data Sourcing</string>
    <string name="Health_Data1a">Basics</string>
    <string name="Health_Data2a">Vitals</string>
    <string name="Health_Data3a">Blood</string>
    <string name="Health_Data4a">Heart</string>
    <string name="Health_Data5a">Respiratory</string>
    <string name="Health_Data6a">Sourcing</string>
    <string name="Health_Data16a">Sources</string>
    <string name="Health_Data3b">Walking Plan</string>
    <string name="action_food_diary_credit_title">Credit / Food and Diet Diary </string>
    <string name="action_fitness_log_debit_title"> Debit / Fitness and Activity Log</string>
    <string name="action_stop_weightloss_title">Stop Weight Loss</string>
    <string name="action_Client_Guide_title">Using Calorie Countdown app</string>
    <string name="action_log_it_in_reminder_title">Change Notifications times </string>
    <string name="Log_it_in_1">Breakfast Time: (Use HHMM 24 Hour format)</string>
    <string name="Log_it_in_2">Lunch Time: (Use HHMM 24 Hour format)</string>
    <string name="Log_it_in_3">Dinner Time: (Use HHMM 24 Hour format)</string>
    <string name="countdown_box">18 JUL 19 </string>
    <string name="title_activity_food__dairy__sheet__ci_f3">Food Diary Sheet</string>
    <string name="prior_dayend_balance">800 points</string>
    <string name="title_activity_food__diary__sheet__cif3"> Breakfast/Lunch/Dinner Food Items</string>
    <string name="title_activity_log_it_in_fragment_3"> Notifications</string>
    <string name="food_item_text">Food / Drink item(s)</string>
    <string name="quantity_text">Quantity</string>
    <string name="calories_text">Calories points</string>
    <string name="add_food_item">Add Food items</string>
    <string name="cancel">Credit Balance</string>
    <string name="cancel2">Cancel</string>
    <string name="cancel3a">Magic Number</string>
    <string name="cancel4a">Re-calibrate and Re-try</string>
    <string name="cancel4a1">Diet Planner and Generator</string>
    <string name="search">Multi Search</string>
    <string name="weight">Add Food item Weight</string>
    <string name="just">Just Add Raw Calories</string>
    <string name="countdown_debit">Countdown       Debit</string>
    <string name="countup_credit">Credit</string>
    <string name="display_dialog">Please Enter Weight in grams/ml of Food Item</string>
    <string name="hello_blank_fragment">Food Item Name*</string>
    <string name="hello_blank_fragment1">Grams / mml per Serving*\n(Enter 100 Please)</string>
    <string name="hello_blank_fragment2">Calories per Serving*</string>
    <string name="hello_blank_fragment3">Fat per 100g/mml</string>
    <string name="hello_blank_fragment4">Saturated Fat per 100g/mml</string>
    <string name="hello_blank_fragment5">Trans Fat per 100g/mml</string>
    <string name="hello_blank_fragment6">Protein per 100g/ml</string>
    <string name="hello_blank_fragment7">Carbs per 100g/ml</string>
    <string name="hello_blank_fragment8">Sugar per 100g/ml</string>
    <string name="hello_blank_fragment9">Salt per 100g/ml</string>
    <string name="hello_blank_fragment10">Is this food Healthy/Superfood?</string>
    <string name="hello_blank_fragment13">Is this an Eat Out Item?</string>
    <string name="hello_blank_fragment14">Polyunsaturates per 100g/ml</string>
    <string name="hello_blank_fragment15">Monounsaturates per 100g/ml</string>
    <string name="hello_blank_fragment11">Fibre per 100g/ml</string>
    <string name="hello_blank_fragment12">Price of Food Item</string>
    <string name="hello_blank_fragment16">Cholesterol per 100g/ml</string>
    <string name="hello_blank_fragment17">Soduim milligrams</string>
    <string name="hello_blank_fragment18">Potassium milligram</string>
    <string name="hello_blank_fragment19">Percentage Vitamin A</string>
    <string name="hello_blank_fragment20">Percentage Vitamin C</string>
    <string name="hello_blank_fragment21">Percentage Calcium</string>
    <string name="hello_blank_fragment22">Perecentage Iron</string>
    <string name="hello_blank_fragment23">* Mandatory Field</string>
    <string name="hello_blank_fragment24">Your Current Weight (lbs)</string>
    <string name="hello_blank_fragment25"> Activity Minutes Performed or Just Add Raw Calories</string>
    <string name="hello_blank_fragment26">Statement Start Date </string>
    <string name="hello_blank_fragment27"> Statement End Date </string>
    <string name="cancel3">Add New Food Item</string>
    <string name="cancel4">Debit Balance</string>
    <string name="cancel5">Start Weight Loss</string>
    <string name="cancel6">Set New Reminder Times</string>
    <string name="cancel7">Fetch Your Food Journal</string>
    <string name="title_activity_add__new__item__activity__cif12">Add_New_Item_Activity_CIF12
    </string>
    <string name="title_activity_Monthly_Statement_boxcif151">Monthly_Statement_BOXCIF_151
    </string>
    <string name="title_activity_Populate_boxcif151">Populate_database
    </string>
    <string name="title_activity_debit__activity__cif13">Fitness and Activity Log</string>
    <string name="debit_1">Select the Countdown Activity Performed</string>
    <string name="account_opening">Account Details</string>
    <string name="SWL_First_name">First Name</string>
    <string name="SWL_Last_name">Last Name</string>
    <string name="SWL_email">Email Address</string>
    <string name="SWL_dob">Date of Birth</string>
    <string name="SWL_gender">Gender</string>
    <string name="SWL_bodyframe">Body Frame : Place ur thumb and index finger around ur wrist if your finger overlaps the thumb wrist ur frame is small, if they touch, ur frame is medium if they do not touch frame is large.</string>
    <string name="SWL_quick_start">Select Fix Amount of Weight to Lose</string>
    <string name="SWL_weight_units">Select Weight Units</string>
    <string name="SWL_currentweight">Current Weight</string>
    <string name="SWL_targetweight">Target Weight and Goal</string>
    <string name="SWL_height_units">Select Height Units</string>
    <string name="SWL_client_height">Current Height</string>
    <string name="SWL_breakfast_reminder">Breakfast Log In Reminder Time HHMM (24 Hour format)</string>
    <string name="SWL_lunch_reminder">Lunch Log In Reminder Time HHMM (24 Hour format)</string>
    <string name="SWL_final_meal_reminder">Dinner Log In Reminder Time HHMM (24 Hour format)</string>
    <string name="SWL_final_final_meal_reminder">Late Supper Log In Reminder Time HHMM (24 Hour format)</string>
    <string name="SWL_reminder">Set Reminder On/Off</string>
    <string name="Stop_Weightloss">You are more likely to lose all your gains if you stop using the App and the new healthier Lifestyle is has brought about, that is why there is no such thing as a stop weight loss button instead make using the App a constant part of your Life. To maintain your gains carry on using the App, making sure your Balance stays at Zero, note that if your Balance goes minus to below zero, it means you can and should eat more Calories, for you are not counting down but maintaining. Or you could set and start a new Weight loss target by using the Start Weight Loss Option again.</string>
    <string name="channel_id">default</string>
    <string name="channel_name">ESE</string>
    <string name="channel_description">EDET</string>
    <string name="diet_plan0">Name of Diet</string>
    <string name="diet_plan1">Select Diet Breakfast items</string>
    <string name="diet_plan2">Select Diet Lunch items</string>
    <string name="diet_plan3">Select Diet Dinner items</string>
    <string name="diet_plan4">Select Diet Snack items</string>
    <string name="diet_plan5">Select Diet First Brekkie items</string>
    <string name="diet_plan6">Select Diet Big Brunch items</string>
    <string name="diet_plan7">Food item name</string>
    <string name="diet_plan8">Food item name</string>
    <string name="diet_plan9">Food item name</string>
    <string name="hello_blank_fragment_jc">Reference</string>
    <string name="hello_blank_fragment_jc1">Date</string>
    <string name="hello_blank_fragment_jc2">Day From</string>
    <string name="hello_blank_fragment_jc3">Day To</string>
    <string name="hello_blank_fragment_jc4">Amount of Points to Journal</string>
    <string name="hello_blank_fragment_jc5">Description</string>
    <string name="hello_blank_fragment_jc6">Journal Debit</string>
    <string name="hello_blank_fragment_jc7">Journal Credit</string>
    <string name="hello_blank_fragment_jc8">Transactions_IDs to Journal (Optional/Advance)</string>
    <string name="cancel3x">Save Journal</string>
    <string name="Steps">Debit Balance with Steps</string>
    <string name="Steps2">Debit Balance with Steps Manually</string>
</resources>