<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ese.com.caloriecountdownappforandroidbrown.CCD_GUI_CD_CIF1">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />



    <item android:id="@+id/action_start_weightloss"
        android:title="@string/action_start_weightloss_title"/>

<group>

    <item android:id="@+id/action_food_diary_credit"
        android:title="@string/action_food_diary_credit_title">
        <menu>

            <item android:id="@+id/submenu8x" android:title=" Accrual">
                <menu>
                    <item android:id="@+id/submenu3aa" android:title="Accurual"></item>
                    <item android:id="@+id/submenu2a" android:title="Journal"></item>
                    <item android:id="@+id/submenu3ca" android:title="SOP"></item>
                    <item android:id="@+id/submenu1a" android:title="POP"></item>
                </menu>
            </item>


            <item android:id="@+id/submenu8xx" android:title="Meal Time">
                <menu>
                    <item android:id="@+id/submenu3" android:title="Create a Diet Plan"></item>
                    <item android:id="@+id/submenu2" android:title="First Breakie Box Food items"></item>
                    <item android:id="@+id/submenu3c" android:title="Big Breakfast Box Food items"></item>
                    <item android:id="@+id/submenu1" android:title="Big Brunch Box Food items"></item>
                    <item android:id="@+id/submenu4" android:title="Dinner Box Food items"></item>
                    <item android:id="@+id/submenu3d" android:title="Snack Box Food items"></item>
                    <item android:id="@+id/submenu3a" android:title="Supper Box Food items"></item>

                </menu>
            </item>


            <group android:id="@+id/group3">
            <item android:id="@+id/submenu5" android:title="Monthly Statement and Food Journal"></item>
            </group>
            <group android:id="@+id/group4">
            <item android:id="@+id/submenu6" android:title="Populate Food Database"></item>
            <item android:id="@+id/submenu9" android:title="Depopulate Food Database"></item>
            <item android:id="@+id/submenu7" android:title="Clear Database"></item>
            </group>
            <item android:id="@+id/submenu8" android:title=" Calculator">
                <menu>
                    <item android:id="@+id/sub-submenuitem1" android:title="Web Calculator"></item>
                    <item android:id="@+id/sub-submenuitem2" android:title="Native Caluclator"></item>
                </menu>
            </item>
        </menu>
    </item>


            <item android:id="@+id/action_fitness_log_debit"
                android:title="@string/action_fitness_log_debit_title"/>

</group>

            <item android:id="@+id/action_log_it_in_reminder"
                android:title="@string/action_log_it_in_reminder_title"/>

            <item android:id="@+id/Health"
                android:title="@string/Health">
            <menu>

                    <item android:id="@+id/submenu10" android:title="@string/Health_Data1">

                        <menu>

                            <item android:id="@+id/sub-sub-submenuitem1a" android:title="@string/Health_Data1a">

                                <menu>

                                    <item android:id="@+id/sub-submenuitem48" android:title="@string/Health_Data1"></item>
                                    <item android:id="@+id/sub-submenuitem49" android:title="@string/Health_Data2">

                                    <menu>
                                        <item android:id="@+id/sub-submenuitem50a" android:title="@string/Health_Data3b"></item>
                                    </menu>

                                    </item>
                                    <item android:id="@+id/sub-submenuitem50" android:title="@string/Health_Data3"></item>
                                    <item android:id="@+id/sub-submenuitem51" android:title="@string/Health_Data4"></item>
                                    <item android:id="@+id/sub-submenuitem52" android:title="@string/Health_Data5"></item>
                                    <item android:id="@+id/sub-submenuitem53" android:title="@string/Health_Data6"></item>

                                </menu>

                            </item>


                                    <item android:id="@+id/sub-submenuitem10" android:title="@string/Health_Data2a">

                                        <menu>

                                            <item android:id="@+id/sub-submenuitem16" android:title="@string/Health_Data7"></item>
                                            <item android:id="@+id/sub-submenuitem17" android:title="@string/Health_Data8"></item>
                                            <item android:id="@+id/sub-submenuitem18" android:title="@string/Health_Data9"></item>
                                            <item android:id="@+id/sub-submenuitem19" android:title="@string/Health_Data10"></item>

                                        </menu>

                                    </item>



                                            <item android:id="@+id/sub-submenuitem12" android:title="@string/Health_Data3a">

                                                <menu>

                                                    <item android:id="@+id/sub-submenuitem22" android:title="@string/Health_Data13"></item>
                                                    <item android:id="@+id/sub-submenuitem23" android:title="@string/Health_Data14"></item>
                                                    <item android:id="@+id/sub-submenuitem30" android:title="@string/Health_Data23"></item>
                                                    <item android:id="@+id/sub-submenuitem31" android:title="@string/Health_Data24"></item>

                                                </menu>

                                            </item>



                                                    <item android:id="@+id/sub-submenuitem13" android:title="@string/Health_Data4a">

                                                        <menu>

                                                            <item android:id="@+id/sub-submenuitem32" android:title="@string/Health_Data37"></item>
                                                            <item android:id="@+id/sub-submenuitem33" android:title="@string/Health_Data16"></item>
                                                            <item android:id="@+id/sub-submenuitem26" android:title="@string/Health_Data17"></item>
                                                            <item android:id="@+id/sub-submenuitem27" android:title="@string/Health_Data18"></item>
                                                            <item android:id="@+id/sub-submenuitem28" android:title="@string/Health_Data19"></item>
                                                            <item android:id="@+id/sub-submenuitem29" android:title="@string/Health_Data20"></item>

                                                        </menu>

                                                    </item>



                                                            <item android:id="@+id/sub-submenuitem14" android:title="@string/Health_Data5a">


                                                                <menu>

                                                                    <item android:id="@+id/sub-submenuitem36" android:title="@string/Health_Data36"></item>
                                                                    <item android:id="@+id/sub-submenuitem37" android:title="@string/Health_Data25"></item>
                                                                    <item android:id="@+id/sub-submenuitem38" android:title="@string/Health_Data26"></item>
                                                                    <item android:id="@+id/sub-submenuitem39" android:title="@string/Health_Data27"></item>
                                                                    <item android:id="@+id/sub-submenuitem40" android:title="@string/Health_Data28"></item>
                                                                    <item android:id="@+id/sub-submenuitem41" android:title="@string/Health_Data29"></item>
                                                                    <item android:id="@+id/sub-submenuitem42" android:title="@string/Health_Data30"></item>
                                                                    <item android:id="@+id/sub-submenuitem43" android:title="@string/Health_Data31"></item>
                                                                    <item android:id="@+id/sub-submenuitem44" android:title="@string/Health_Data32"></item>
                                                                    <item android:id="@+id/sub-submenuitem45" android:title="@string/Health_Data33"></item>

                                                                </menu>

                                                            </item>






                                                                    <item android:id="@+id/sub-submenuitem15" android:title="@string/Health_Data6a">

                                                                        <menu>

                                                                            <item android:id="@+id/sub-submenuitem34" android:title="@string/Health_Data11"></item>
                                                                            <item android:id="@+id/sub-submenuitem35" android:title="@string/Health_Data12"></item>

                                                                        </menu>

                                                                    </item>



                                                                            <item android:id="@+id/sub-sub-submenuitem6a" android:title="@string/Health_Data6a">

                                                                                <menu>

                                                                                    <item android:id="@+id/sub-submenuitem46" android:title="@string/Health_Data21"></item>
                                                                                    <item android:id="@+id/sub-submenuitem47" android:title="@string/Health_Data22"></item>

                                                                                </menu>

                                                                            </item>
                        </menu>



                    </item>

            </menu>
            </item>



                                                                            <item android:id="@+id/action_stop_weightloss"
                                                                                android:title="@string/action_stop_weightloss_title"/>

                                                                            <item android:id="@+id/action_Client_Guide"
                                                                                android:title="@string/action_Client_Guide_title"/>




                                                                            </menu>