<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">




<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textview_101"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hello_blank_fragment_jc" />

            <EditText
                android:id="@+id/edit_text401"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textview_111"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hello_blank_fragment_jc1" />
            <EditText
                android:id="@+id/edit_text41"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/textview_121"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hello_blank_fragment_jc2" />
            <EditText
                android:id="@+id/edit_text421"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/textview_131"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hello_blank_fragment_jc3" />
            <EditText
                android:id="@+id/edit_text431"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/textview_141"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hello_blank_fragment_jc4" />
            <EditText
                android:id="@+id/edit_text441"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/textview_151"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hello_blank_fragment_jc5" />
            <EditText
                android:id="@+id/edit_text451"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/textview_161"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hello_blank_fragment_jc6" />
            <EditText
                android:id="@+id/edit_text461"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/textview_171"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hello_blank_fragment_jc7" />
            <EditText
                android:id="@+id/edit_text471"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/textview_181"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hello_blank_fragment_jc8" />
            <EditText
                android:id="@+id/edit_text481"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />



            <Button
                android:id="@+id/button10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text= "@string/cancel3x"/>

            <Button
                android:id="@+id/button11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel2" />


        </LinearLayout>


</ScrollView>

</android.support.constraint.ConstraintLayout>