<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="ese.com.caloriecountdownappforandroidbrown.Debit_Activity_CiF003_fragment_box">

        <TextView
            android:id="@+id/textview36"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12sp"
            android:text="@string/debit_1" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spincity"
            android:padding="12sp"
            android:entries="@array/activities"/>

        <TextView
            android:id="@+id/textview34"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12sp"
            android:text="@string/hello_blank_fragment24" />
        <EditText
            android:id="@+id/edit_text63"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/textview35"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12sp"
            android:text="@string/hello_blank_fragment25" />
        <EditText
            android:id="@+id/edit_text64"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button123"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text= "@string/Steps"/>

        <Button
            android:id="@+id/button124"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text= "@string/Steps2"/>

        <Button
            android:id="@+id/button12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text= "@string/cancel4"/>

        <Button
            android:id="@+id/button13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text= "@string/cancel2"/>


    </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.ConstraintLayout>